loopfor.LoopFor.scala.error
Compilation error:
LoopFor:12: error: ')' expected but '}' found.
	}
        ^